@@ -1,3 +1,7 @@
+   -- new $ENV{DS_DEBUG} to warn about weird conditions, which currently
+      means just peer_ip_string returning undef.  trying to trace that down
+      in perlbal occasionally, but DS_DEBUG might be useful in the future
+      for other things
    -- account for PostEventLoop running with two items in %PushBackSet,
       the first of which closes the second, so the second would crash
       trying to deref undef when it can't find the previously evaluated
